--- a/_config.yml
+++ b/_config.yml
@@ -102,4 +102,6 @@ theme: next
 # Deployment
 ## Docs: https://hexo.io/docs/one-command-deployment
 deploy:
-  type: ''
+  type: git
+  repository: git@github.com:ljhajax/Blog.git
+  branch: master
